<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_regular"
        android:text="@string/terms"
        android:textColor="@color/text_muted"
        android:textSize="12sp" />

    <View
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/bg_dot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_regular"
        android:text="@string/privacy"
        android:textColor="@color/text_muted"
        android:textSize="12sp" />

    <View
        android:layout_width="4dp"
        android:layout_height="4dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/bg_dot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_regular"
        android:text="@string/return_policy"
        android:textColor="@color/text_muted"
        android:textSize="12sp" />

</LinearLayout>